#1496 (non) uso del connection pooling